Fix .options visibility when theme switches

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -7,6 +7,7 @@ $white: #efefef;
 
 $h1-size: 3rem;
 $p-size: 20px;
+$stripe-border-width: 0.5rem solid;
 
 $themes: (
   home: (
@@ -16,9 +17,10 @@ $themes: (
     options-unchecked-fill: $black,
     text-outline: none,
     text-bg-color: none,
-    color: $white,
+    quote-color: $black,
+    option-color: $white,
     stripes: none,
-    stripes-outline: 1rem solid $black,
+    stripes-outline: $stripe-border-width + $black,
     stripe-01: $gold,
     stripe-02: $white,
     stripe-03: $gold,
@@ -32,9 +34,10 @@ $themes: (
     options-unchecked-fill: $white,
     text-outline: none,
     text-bg-color: none,
-    color: $black,
+    quote-color: $black,
+    option-color: $black,
     stripes: none,
-    stripes-outline: 1rem solid $black,
+    stripes-outline: $stripe-border-width + $black,
     stripe-01: $gold,
     stripe-02: $white,
     stripe-03: $gold,
@@ -48,9 +51,10 @@ $themes: (
     options-unchecked-fill: $black,
     text-outline: none,
     text-bg-color: none,
-    color: $gold,
+    quote-color: $black,
+    option-color: $gold,
     stripes: none,
-    stripes-outline: 1rem solid $black,
+    stripes-outline: $stripe-border-width + $black,
     stripe-01: $gold,
     stripe-02: $gold,
     stripe-03: $gold,
@@ -74,9 +78,10 @@ $themes: (
     options-unchecked-fill: $white,
     text-outline: 2rem solid $black,
     text-bg-color: $white,
-    color: $black,
+    quote-color: $black,
+    option-color: $black,
     stripes: block,
-    stripes-outline: 1rem solid $black,
+    stripes-outline: $stripe-border-width + $black,
     stripe-01: $black,
     stripe-02: $black,
     stripe-03: $black,
@@ -97,7 +102,7 @@ body {
   background-color: var(--background-color);
   // background-image: var(--background-image);
   // background-size: var(--background-size);
-  color: var(--color);
+  color: var(--quote-color);
   font-size: $p-size;
   overflow: hidden;
 }
@@ -165,14 +170,14 @@ strong {
         padding: 0 2rem;
         cursor: pointer;
         font-size: 1rem;
-        color: var(--color);
+        color: var(--option-color);
 
         &.checked {
-          color: var(--color);
+          color: var(--option-color);
 
           &:before {
-            background-color: var(--color);
-            border-color: var(--color);
+            background-color: var(--option-color);
+            border-color: var(--quote-color);
           }
         }
 
@@ -184,7 +189,7 @@ strong {
           transform: translateY(-50%);
           width: $p-size;
           height: 20px;
-          border: 2px solid var(--color);
+          border: 2px solid var(--option-color);
           background-color: var(--options-unchecked-fill);
           border-radius: 50%;
           transition: background-color 0.3s ease;
@@ -192,8 +197,8 @@ strong {
 
         // Apply styles when the radio button is checked
         input:checked + &:before {
-          background-color: var(--color);
-          border-color: var(--color);
+          background-color: var(--option-color);
+          border-color: var(--option-color);
           content: "\2022";
           text-align: center;
           line-height: 20px;
@@ -201,10 +206,10 @@ strong {
 
         // Apply hover effect to labels
         &:hover {
-          color: var(--color);
+          color: var(--option-color);
 
           &:before {
-            background-color: var(--color);
+            background-color: var(--option-color);
           }
         }
       }
@@ -247,7 +252,7 @@ strong {
 
     #tomlinism-quote {
       font-size: 4rem;
-      color: var(--color);
+      color: var(--quote-color);
       width: 70dvw;
       text-align: center;
     }
